# dazzle

./: .dockerignore  .env  Cargo.toml  Dockerfile  docker-compose.yml
examples/: multi_client.rs  simple_book.rs
src/: lib.rs  main.rs
src/app/: app_state.rs  bootstrap.rs  mod.rs  models.rs  router.rs
src/common/: config.rs  error.rs
src/deribit/: channel.rs  channel_name.rs  client.rs  connection.rs  mod.rs  models.rs  service.rs  subscription_stream.rs  ticker_stream.rs
src/models/: book.rs
src/order_book/: book.rs  book_manager.rs  mod.rs
