[package]
name = "dazzle"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
tower-http = { version = "0.6.8", features = ["trace"] }
dotenvy = "0.15.7"
tokio = { version = "1.51.1", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt", "registry"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
tokio-tungstenite = { version = "0.29.0", features = ["native-tls"] }
serde_json = "1.0.149"
futures-util = "0.3.32"
backoff = { version = "0.4.0", features = ["tokio"] }
scopeguard = "1.2.0"
dashmap = "6.1.0"
futures = "0.3.32"
tokio-stream = { version = "0.1.18", features = ["sync"] }
uuid = { version = "1.23.1", features = ["v4"] }
reqwest = { version = "0.13.2", features = ["json", "stream"] }
